import java.util.ArrayList;

public class AppointmentManagement {
    private ArrayList<Schedule> schedules;

    public AppointmentManagement() {
        this.schedules = new ArrayList<>();
    }

    public static void scheduleAppointment() {

    }

    public static void viewDoctorSchedule() {
    }

    public ArrayList<Schedule> getSchedules() {
        return schedules;
    }
}
